[gd_scene load_steps=31 format=2]

[ext_resource path="res://Prefabs/Dynamic_Fonts/UI_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/Questgiver.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menu_Settings.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/InputMap_Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/Shaders/UI_shader_blur.tres" type="Shader" id=6]
[ext_resource path="res://Assets/UI/buttons/button_audio_select.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/buttons/button_audio_normal.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/buttons/button_audio_press.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/buttons/button_video_normal.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/buttons/button_video_press.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/buttons/button_controls_select.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/buttons/button_back_select.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/buttons/button_controls_press.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/buttons/button_back_normal.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/buttons/button_controls_normal.png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/buttons/button_back_press.png" type="Texture" id=17]
[ext_resource path="res://Assets/UI/buttons/button_video_select.png" type="Texture" id=18]
[ext_resource path="res://Assets/UI/buttons/button_yes_normal.png" type="Texture" id=19]
[ext_resource path="res://Assets/UI/buttons/button_no_normal.png" type="Texture" id=20]
[ext_resource path="res://Assets/UI/buttons/button_yes_select.png" type="Texture" id=21]
[ext_resource path="res://Assets/UI/buttons/button_no_press.png" type="Texture" id=22]
[ext_resource path="res://Assets/UI/buttons/button_no_select.png" type="Texture" id=23]
[ext_resource path="res://Assets/UI/buttons/button_yes_press.png" type="Texture" id=24]
[ext_resource path="res://Assets/UI/save_panel_2.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Audio_Menu.tscn" type="PackedScene" id=26]
[ext_resource path="res://Scenes/Video_Menu.tscn" type="PackedScene" id=27]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )
shader_param/tint = Color( 0, 0, 0, 0.352941 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Menu_Settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 6.0, 47.0, 61.0, 89.0, 75.0, 103.0, 117.0, 131.0, 34.0, 164.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 136.0, 161.0, 304.0, 120.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Descript_label" type="Label" parent="."]
margin_left = 8.0
margin_top = 164.0
margin_right = 312.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -33.0
margin_right = 40.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_button" type="TextureButton" parent="Menu/VBoxContainer"]
margin_right = 80.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../back_button")
focus_neighbour_bottom = NodePath("../video_button")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 7 )

[node name="video_button" type="TextureButton" parent="Menu/VBoxContainer"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../audio_button")
focus_neighbour_bottom = NodePath("../controls_button")
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 18 )
texture_disabled = ExtResource( 10 )
texture_focused = ExtResource( 18 )

[node name="controls_button" type="TextureButton" parent="Menu/VBoxContainer"]
margin_top = 48.0
margin_right = 80.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../video_button")
focus_neighbour_bottom = NodePath("../back_button")
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 16 )
texture_focused = ExtResource( 12 )

[node name="back_button" type="TextureButton" parent="Menu/VBoxContainer"]
margin_top = 72.0
margin_right = 80.0
margin_bottom = 92.0
focus_neighbour_top = NodePath("../controls_button")
focus_neighbour_bottom = NodePath("../audio_button")
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 13 )
texture_disabled = ExtResource( 15 )
texture_focused = ExtResource( 13 )

[node name="Label" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.0
margin_top = 6.0
margin_right = 42.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Control" parent="Options"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_slider" type="HSlider" parent="Options/Audio"]
margin_left = 88.0
margin_top = 61.0
margin_right = 184.0
margin_bottom = 77.0
min_value = -20.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soundfx_slider" type="HSlider" parent="Options/Audio"]
margin_left = 88.0
margin_top = 89.0
margin_right = 184.0
margin_bottom = 105.0
min_value = -20.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_label" type="Label" parent="Options/Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -19.0
margin_right = -19.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 1 )
text = "Music:"

[node name="Sfx_label" type="Label" parent="Options/Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = 9.0
margin_right = -19.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 1 )
text = "SFX:"

[node name="Video" type="Control" parent="Options"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="check_fullscreen" type="CheckBox" parent="Options/Video"]
margin_left = 160.0
margin_top = 63.0
margin_right = 184.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="check_borderless" type="CheckBox" parent="Options/Video"]
margin_left = 160.0
margin_top = 84.0
margin_right = 184.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="check_vsync" type="CheckBox" parent="Options/Video"]
margin_left = 160.0
margin_top = 104.0
margin_right = 184.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Options/Video"]
margin_left = 114.0
margin_top = 46.0
margin_right = 182.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution_label" type="Label" parent="Options/Video"]
margin_left = 41.0
margin_top = 47.0
margin_right = 97.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 1 )
text = "Resolution:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen_label" type="Label" parent="Options/Video"]
margin_left = 41.0
margin_top = 68.0
margin_right = 97.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
text = "Fullscreen:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderlessWindow_label" type="Label" parent="Options/Video"]
margin_left = 41.0
margin_top = 89.0
margin_right = 97.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 1 )
text = "Borderless:"

[node name="Vsync_label" type="Label" parent="Options/Video"]
margin_left = 41.0
margin_top = 109.0
margin_right = 97.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 1 )
text = "Vsync:"

[node name="Container" type="VBoxContainer" parent="Options"]
margin_top = 6.0
margin_right = 199.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option_label" type="Label" parent="Options/Container"]
margin_right = 199.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMap_Menu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Audio_Menu" parent="." instance=ExtResource( 26 )]
visible = false

[node name="Video_Menu" parent="." instance=ExtResource( 27 )]
visible = false

[node name="save_popup" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -45.0
margin_right = 80.0
margin_bottom = 45.0

[node name="Panel" type="TextureRect" parent="save_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -45.0
margin_right = 80.0
margin_bottom = 45.0
texture = ExtResource( 25 )

[node name="save_button" type="TextureButton" parent="save_popup/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -10.0
margin_right = 40.0
margin_bottom = 10.0
focus_neighbour_left = NodePath("../nosave_button")
focus_neighbour_top = NodePath("../nosave_button")
focus_neighbour_right = NodePath("../nosave_button")
focus_neighbour_bottom = NodePath("../nosave_button")
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 21 )
texture_disabled = ExtResource( 19 )
texture_focused = ExtResource( 21 )

[node name="nosave_button" type="TextureButton" parent="save_popup/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 36.0
focus_neighbour_left = NodePath("../save_button")
focus_neighbour_top = NodePath("../save_button")
focus_neighbour_right = NodePath("../save_button")
focus_neighbour_bottom = NodePath("../save_button")
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
texture_disabled = ExtResource( 20 )
texture_focused = ExtResource( 23 )

[node name="Label" type="Label" parent="save_popup/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.5
margin_top = 6.0
margin_right = 55.5
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Save Game Settings?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="save_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.5
margin_top = -10.0
margin_right = 15.5
margin_bottom = 34.0
custom_constants/vseparation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_manager" parent="." instance=ExtResource( 4 )]

[connection signal="focus_entered" from="Menu/VBoxContainer/audio_button" to="." method="_on_audio_button_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/audio_button" to="." method="_on_audio_button_focus_exited"]
[connection signal="pressed" from="Menu/VBoxContainer/audio_button" to="." method="_on_audio_button_pressed"]
[connection signal="focus_entered" from="Menu/VBoxContainer/video_button" to="." method="_on_video_button_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/video_button" to="." method="_on_video_button_focus_exited"]
[connection signal="pressed" from="Menu/VBoxContainer/video_button" to="." method="_on_video_button_pressed"]
[connection signal="focus_entered" from="Menu/VBoxContainer/controls_button" to="." method="_on_controls_button_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/controls_button" to="." method="_on_controls_button_focus_exited"]
[connection signal="pressed" from="Menu/VBoxContainer/controls_button" to="." method="_on_controls_button_pressed"]
[connection signal="focus_entered" from="Menu/VBoxContainer/back_button" to="." method="_on_back_button_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/back_button" to="." method="_on_back_button_focus_exited"]
[connection signal="pressed" from="Menu/VBoxContainer/back_button" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="Options/Audio/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Options/Audio/soundfx_slider" to="." method="_on_soundfx_slider_value_changed"]
[connection signal="toggled" from="Options/Video/check_fullscreen" to="." method="_on_check_fullscreen_toggled"]
[connection signal="toggled" from="Options/Video/check_borderless" to="." method="_on_check_borderless_toggled"]
[connection signal="toggled" from="Options/Video/check_vsync" to="." method="_on_check_vsync_toggled"]
[connection signal="item_selected" from="Options/Video/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="hide" from="InputMap_Menu" to="." method="_on_InputMap_Menu_hide"]
[connection signal="hide" from="Audio_Menu" to="." method="_on_Audio_Menu_hide"]
[connection signal="hide" from="Video_Menu" to="." method="_on_Video_Menu_hide"]
[connection signal="focus_exited" from="save_popup/Panel/save_button" to="." method="_on_save_button_focus_exited"]
[connection signal="pressed" from="save_popup/Panel/save_button" to="." method="_on_save_button_pressed"]
[connection signal="focus_exited" from="save_popup/Panel/nosave_button" to="." method="_on_nosave_button_focus_exited"]
[connection signal="pressed" from="save_popup/Panel/nosave_button" to="." method="_on_nosave_button_pressed"]
[connection signal="pressed" from="save_popup/Panel/nosave_button" to="Audio_Menu" method="_on_nosave_button_pressed"]
